AM_CXXFLAGS = -w 
bin_PROGRAMS =$(top_builddir)/bin/FuzzyBrain
__top_builddir__bin_FuzzyBrain_SOURCES = Configurator.cpp\
Configurator.h\
defuzzificators/CentroidDefuzzificator.cpp\
defuzzificators/CentroidDefuzzificator.h\
defuzzificators/COSDefuzzificator.cpp\
defuzzificators/COSDefuzzificator.h\
defuzzificators/Defuzzificator.cpp\
defuzzificators/Defuzzificator.h\
engine_creator/EngineCreator.cpp\
engine_creator/EngineCreator.h\
engine_creator/XMLFPCreator.cpp\
engine_creator/XMLFPCreator.h\
engine_creator/XMLFPParser.cpp\
engine_creator/XMLFPParser.h\
ErrorDefinition.h\
fuzzy_rules/FuzzyRule.cpp\
fuzzy_rules/FuzzyRule.h\
fuzzy_rules/MamdaniRule.cpp\
fuzzy_rules/MamdaniRule.h\
fuzzy_rules/RuleAnalyzer.cpp\
fuzzy_rules/RuleAnalyzer.h\
fuzzy_rules/RulesContainer.cpp\
fuzzy_rules/RulesContainer.h\
fuzzy_sets/FuzzySet.cpp\
fuzzy_sets/FuzzySet.h\
fuzzy_sets/RectangularFuzzySet.cpp\
fuzzy_sets/RectangularFuzzySet.h\
fuzzy_sets/SimplePolygonalFuzzySet.cpp\
fuzzy_sets/SimplePolygonalFuzzySet.h\
fuzzy_sets/SingletonFuzzySet.cpp\
fuzzy_sets/SingletonFuzzySet.h\
fuzzy_sets/TrapezoidalFuzzySet.cpp\
fuzzy_sets/TrapezoidalFuzzySet.h\
fuzzy_sets/TriangularFuzzySet.cpp\
fuzzy_sets/TriangularFuzzySet.h\
FuzzyEngine.cpp\
FuzzyEngine.h\
FuzzyObject.h\
input_providers/InputProvider.cpp\
input_providers/InputProvider.h\
input_providers/InputStreamProvider.cpp\
input_providers/InputStreamProvider.h\
input_providers/ManualInputProvider.cpp\
input_providers/ManualInputProvider.h\
lib/easylogging++.h\
lib/getopt/getopt_pp.cpp\
lib/getopt_pp.h\
lib/pugiconfig.hpp\
lib/pugixml.cpp\
lib/pugixml.hpp\
linguistic_variables/InputLinguisticVariable.cpp\
linguistic_variables/InputLinguisticVariable.h\
linguistic_variables/LinguisticVariable.cpp\
linguistic_variables/LinguisticVariable.h\
linguistic_variables/MamdaniOutputVariable.cpp\
linguistic_variables/MamdaniOutputVariable.h\
main.cpp\
MamdaniFuzzyObject.cpp\
MamdaniFuzzyObject.h\
MappedPointersContainer.hpp\
operator/AndOperator.h\
operator/OrOperator.h\
operator/ZadehianAnd.cpp\
operator/ZadehianAnd.h\
operator/ZadehianOr.cpp\
operator/ZadehianOr.h\
shape/PolygonalShape.cpp\
shape/PolygonalShape.h\
shape/RectangularShape.cpp\
shape/RectangularShape.h\
shape/TrapezoidalShape.cpp\
shape/TrapezoidalShape.h\
shape/TriangularShape.cpp\
shape/TriangularShape.h\
Utility.cpp\
Utility.h

